<resources>
    <string name="app_name">Edu Bot</string>
    <string name="select_device">Select Device</string>
    <string name="tap_to_speak">TAP THE START BUTTON TO SPEAK</string>
    <string name="bluetooth_connections_hint">PLEASE ENSURE BOT CONNECTION</string>
    <string name="faild_bluetooth_con">DEVICE FAILS TO CONNECT</string>
    <string name="answer_prosessing">ANSWER PROCESSING...</string>
    <string name="i_didnot_find_anything">Sorry I didn\'t find anything.Please try again with the query</string>
    <string name="listing">LISTENING ...</string>
    <string name="bot_response">Hi I\'am Edu Bot , your personal Assistant. Developed by Robo Tech Valley.</string>
    <string name="something_wrong">There was some communication issue. Please Try again!</string>
    <string name="enter_your_query">PLEASE ENTER YOUR QUERY!</string>
    <string name="start">START</string>
    <string name="dotdotdot" translatable="false">....</string>
    <string name="stop">STOP</string>
    <string name="toolbar_title">EDU BOT</string>
    <string name="ignore" translatable="false">IGNORE</string>
</resources>
