<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/toolbar_layout_shape"
        android:visibility="gone">

        <TextView
            android:id="@+id/title_of_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="23dp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:subtitleTextColor="@android:color/background_light"
            app:title="@string/toolbar_title"
            app:titleTextColor="@android:color/background_light" />


        <ImageView
            android:id="@+id/buttonConnect"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:padding="5dp"
            android:src="@drawable/ic_bluetooth"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:src="@drawable/ic_settings"
            android:tint="@color/white" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">


        <EditText
            android:id="@+id/queryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_toStartOf="@+id/sendBtn"
            android:background="@null"
            android:editable="false"
            android:ellipsize="end"
            android:focusable="false"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:textAllCaps="true"
            android:hint="@string/bluetooth_connections_hint"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="14sp" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="70dp" />


        <!--        <ImageView-->
        <!--            android:id="@+id/micButton"-->
        <!--            android:src="@drawable/mic_sound"-->
        <!--            android:layout_weight="1"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_alignParentStart="true"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:visibility="visible" />-->

        <ImageView
            android:id="@+id/sendBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:visibility="visible"
            app:srcCompat="@drawable/chatbot_send_btn" />

        <LinearLayout
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <Button
                android:id="@+id/startBtn"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:background="@color/colorPrimary"
                android:text="@string/start"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/ignore"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2.5dp"
                android:background="@color/red"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/ignore"/>

        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:id="@+id/chatScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inputLayout"
        android:layout_gravity="bottom"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="180dp">

        <LinearLayout
            android:id="@+id/chatLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical"></LinearLayout>


    </ScrollView>

</FrameLayout>
